# webclip

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: main.rs
web/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html  package-lock.json  package.json
web/src/: main.rs
