[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
material-dioxus = { version = "0.0.3-dev", features = ["full"] }
once_cell = "1.18.0"
reqwest = "0.11.20"
web-sys = { version = "0.3.64", features = ["Window", "Location"] }

[profile.release]
opt-level = "s"
strip = true
